[package]
edition = "2021"
name = "monoio-tls-example"
version = "0.1.0"

[dependencies]
monoio = {version = "0.0.9"}
rustls-pemfile = "1"
webpki-roots = "0.22"

monoio-rustls-fork-shadow-tls = {version = "0.0.7", path = "../monoio-rustls", features = ["tls12"]}
rustls-fork-shadow-tls = {version = "0.20", features = ["tls12"]}

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
