[package]
name = "monoio-rustls-fork-shadow-tls"
version = "0.3.0-mod.2"

authors = ["ChiHai <ihciah@gmail.com>", "Rain Jiang <rain-jiang@outlook.com>"]
categories = ["asynchronous", "cryptography", "network-programming"]
description = "Asynchronous TLS streams wrapper for Monoio based on Rustls."
edition = "2021"
homepage = "https://github.com/shadow-tls/monoio-tls"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/shadow-tls/monoio-tls"

[dependencies]
monoio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

monoio-io-wrapper = { version = "0.1.1", path = "../monoio-io-wrapper" }
rustls-fork-shadow-tls = { version = "0.20.9-mod.2", default-features = false }

[features]
dangerous_configuration = ["rustls-fork-shadow-tls/dangerous_configuration"]
default = ["logging", "tls12"]
logging = ["rustls-fork-shadow-tls/logging"]
tls12 = ["rustls-fork-shadow-tls/tls12"]
# Once unsafe_io is enabled, you may not drop the future before it returns ready.
# It saves one buffer copy than disabled.
unsafe_io = ["monoio-io-wrapper/unsafe_io"]

[dev-dependencies]
monoio = { workspace = true }
webpki-roots = "0.25.2"
